--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="w-100"></div>
           <div class="col">
             <p class="description d-sr joke"><span class="align-top"></span><a href="BK.pdf" target="_blank">This</a> is my resumé.
-    <br/><span class="text-muted">Last updated 18/5/2020</span></p>
+    <br/><span class="text-muted">Last updated 2021-02-01 (YYYY-MM-DD)</span></p>
           </div>
       </div>
     </div>
