--- a/index.html
+++ b/index.html
@@ -156,6 +156,30 @@
         -webkit-transform: translateX(13px);
       }
 
+      /* Skeleton loading animation */
+      .skeleton-loading-bar {
+        height: 1.8rem;
+        background: linear-gradient(
+          90deg,
+          #f0f0f0 25%,
+          #d0d0d0 50%,
+          #f0f0f0 75%
+        );
+        background-size: 200% 100%;
+        margin-bottom: 0.7rem;
+        animation: loading 1.5s infinite;
+      }
+
+      /* Animation keyframes */
+      @keyframes loading {
+        0% {
+          background-position: -100% 0;
+        }
+        100% {
+          background-position: 100% 0;
+        }
+      }
+
       @media screen and (max-width: 600px) {
         .blog-list-item {
           flex-direction: column;
